Change in code for images

--- a/03hand-coding/index.html
+++ b/03hand-coding/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Emily West">
     </head>
     <body>
-        <div style="background-image: url(Images/Shetland_(TV_series)_titlecard.jpg)"></div>
+        <div style="background-image: url(Images/Shetland_TV_series_titlecard.jpg)"></div>
         <!-- Start of the page header -->
         <header>
         <h1>When was Shetland Produced? </h1>
