update to unit 4

--- a/04intro-css/filmlocations.html
+++ b/04intro-css/filmlocations.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
     <title>Shetland:Film Locations</title>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Oxygen:wght@300;700&display=swap" rel="stylesheet"  type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"  type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Locations where shetland was filmed">
         <meta name="author" content="Emily West">
@@ -32,7 +32,7 @@
             <p><a Href="author.html#Ann_Cleeves"></a>
             <h2> Where does Shetland take place?</h2>
             <p>Shetland, also called the Shetland Islands and formerly Zetland, is an archipelago in Scotland lying between Orkney, the Faroe Islands, and Norway. It is the northernmost region of the United Kingdom. The islands lie about 80 km to the northeast of Orkney, 170 km from mainland Scotland and 220 km west of Norway.</p>
-            <img src="Images/lerwick-shetland.jpeg" alt="lighthouseshetland.webp" width="450" height="550">
+            <img src="Images/lighthouseshetland.webp" alt="lighthouseshetland.webp" width="450" height="550">
          </main>
         <!-- Start of the page footer -->
         <footer>
