--- a/04intro-css/author.html
+++ b/04intro-css/author.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
     <title>Author</title>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Oxygen:wght@300;700&display=swap" rel="stylesheet"  type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"  type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ann Cleeves Author of the hit tv show Shetland">
         <meta name="author" content="Emily West">
