--- a/04intro-css/author.html
+++ b/04intro-css/author.html
@@ -5,18 +5,19 @@
     <title>Author</title>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet"  type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ann Cleeves Author of the hit tv show Shetland">
+    <meta name="description" content="Ann Cleeves Author">
         <meta name="author" content="Emily West">
         <link rel="stylesheet" href="shetland.css" type="text/css">
     </head>
     <body>
         <!-- Start of the page header -->
         <header>
-            <h1>Ann Cleeve</h1>
+            <h1>Ann Cleeves</h1>
             <nav>
         <ul>
             <li><a href="index.html">Shetland Home </a></li>
             <li><a href="filmlocations.html">Film Locations</a></li>
+            <li class="active"> <a href="author.html"> Ann Cleaves Author</a></li>
             </ul>
         </nav>
         </header>
