--- a/04intro-css/filmlocations.html
+++ b/04intro-css/filmlocations.html
@@ -17,7 +17,9 @@
             <nav>
         <ul>
             <li><a href="index.html">Shetland Home</a></li>
-            <li><a href="author.html">Ann Cleeves Author</a></li></ul>
+            <li><a href="author.html">Ann Cleeves Author</a></li>
+            <li  class="active"><a href="filmlocations.html">Film Locations</a></li>
+            </ul>
         </nav>
         </header>
         <!-- Start of the page navigation -->
