--- a/04intro-css/index.html
+++ b/04intro-css/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="author.html">Ann Cleeves Author</a></li>
             <li><a href="filmlocations.html">Film locations</a></li>
-            
+            <li class="active"><a href="index.html">Shetland Home</a></li>
             </ul>
         </nav>
         <!-- Start of the page content -->
