--- a/05images/author.html
+++ b/05images/author.html
@@ -15,10 +15,11 @@
             <h1>Ann Cleeve</h1>
             <nav>
         <ul>
-            <li><a href="index.html">Shetland Home </a></li>
-            <li class=><a href="filmlocations.html">Film Locations</a></li>
+            <li><a href="index.html">Shetland Home </a></li> 
+            <li class="active"> <a href="author.html"> Ann Cleaves Author</a></li>
+            <li><a href="filmlocations.html">Film Locations</a></li>
             <li><a href="actor.html">Cast</a></li>
-            </ul>
+         </ul>
         </nav>
         </header>
           
