--- a/05images/filmlocations.html
+++ b/05images/filmlocations.html
@@ -18,7 +18,8 @@
         <ul>
             <li><a href="index.html">Shetland Home</a></li>
             <li><a href="author.html">Ann Cleeves Author</a></li>
-                <li><a href="actor.html">Cast</a></li>
+            <li class="active"><a href="filmlocations.html"> Film Locations</a></li>
+            <li><a href="actor.html">Cast</a></li>
         </ul>
         </nav>
         </header>
