--- a/05images/actor.html
+++ b/05images/actor.html
@@ -19,6 +19,7 @@
             <li><a href="index.html">Shetland Home</a></li>
             <li><a href="author.html">Ann Cleeves Author</a></li>
             <li><a href="filmlocations.html">Film Locations</a></li>
+            <li class="active"><a href="actor.html">Cast</a></li>
         </ul>
             </nav>
         </header>
