--- a/05images/index.html
+++ b/05images/index.html
@@ -20,9 +20,11 @@
         <!-- Start of the page navigation -->
         <nav>
         <ul>
+            <li class="active"><a href="index.html">Shetland Home</a></li>
             <li><a href="author.html">Ann Cleeves Author</a></li>
             <li><a href="filmlocations.html">Film locations</a></li>
             <li><a href="actor.html">Cast</a></li>
+           
             </ul>
         </nav>
         <!-- Start of the page content -->
